--- a/extension/firefox_webtorrent.html
+++ b/extension/firefox_webtorrent.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>WebTorrent</title>
-    <script src="/extension/out/brave_webtorrent.bundle.js"></script>
+    <script src="out/bundle.js"></script>
   </head>
   <body>
     <div id="root"></div>
